--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <body>
         <model-viewer style="width:100%; height:100%" 
                       disable-tap
+                      autoplay
                       camera-controls touch-action="pan-y"
                       src="AssemblyLouveredRoofEQ_lo.glb"
                       ar
