--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             }
         </style>
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+        <script>
+            window.onload = ()=>{
+                let modelViewer = document.querySelector('model-viewer')
+                modelViewer.activateAR()
+            }
+        </script>
     </head>
     <body>
         <model-viewer style="width:100%; height:100%" 
