--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
         <script>
             window.onload = ()=>{
+                alert('AR')
                 let modelViewer = document.querySelector('model-viewer')
                 modelViewer.activateAR()
             }
