Removed ar button from model viewer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                       src="AssemblyLouveredRoofEQ_lo.glb"
                       ar
                       ar-scale="fixed">
-                    <button slot="ar-button" id="ar-button"></button>
+<!--                     <button slot="ar-button" id="ar-button"></button> -->
         </model-viewer>
         <h1>TAP TO OPEN IN AR</h1>
     </body>
