--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <script>
             window.onload = ()=>{
                 let modelViewer = document.querySelector('model-viewer')
-                modelViewer.onload = ()=>modelViewer.activateAR()
+                modelViewer.onload = ()=>{
+                    alert('onload activateAR')
+                    modelViewer.activateAR()
+                }
 /*                 let h1 = document.querySelector('h1')
                 h1.addEventListener('click', e=>modelViewer.activateAR()) */
             }
