--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 }
             }
         </script>
-        <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+        <script type="module" src="https://modelviewer.dev/node_modules/@google/model-viewer/dist/model-viewer.min.js"></script>
     </head>
     <body>
         <model-viewer style="width:100%; height:100%" 
