Added equinox logo and usdz file for roof model

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
                       autoplay
                       camera-controls touch-action="pan-y"
                       src="AssemblyLouveredRoofEQ_lo_METERS.glb"
+                      ios-src="AssemblyLouveredRoofEQ_lo_METERS.glb"
                       ar
                       ar-scale="fixed">
                     <button slot="ar-button" style="width:0%; height:0%" ></button>
