--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     top: 0%;
                     left: 0%;
                     width: 100%;
-                    height: 20%;
+                    height: 16%;
                     border-width: 0px 0px 0.25ch 0px;
                     border-style: solid;
                     border-color: rgb(232, 117, 36);
@@ -52,27 +52,111 @@
                 }
             }
 
-            @media screen and ((max-aspect-ratio : 1/1) or (min-aspect-ratio : 1/1)) and (max-width : 1670px)
+            @media screen and (max-aspect-ratio : 1/1) and (max-width: 300px)
             {
                 img#logo
                 {
-                    position: absolute;
-                    top: -1%;
+                    position: relative;
+                    top: 0%;
                     left: 1.5%;
                     width: auto;
-                    height: 100%;
+                    height: 8vh;
                 }
             }
 
-            @media screen and (min-aspect-ratio : 1/1) and (min-width : 1670px)
+            @media screen and (max-aspect-ratio : 1/1) and (min-width: 300px) and (max-width: 600px)
             {
                 img#logo
                 {
-                    position: absolute;
-                    top: -1%;
+                    position: relative;
+                    top: 0%;
+                    left: 1.5%;
+                    width: auto;
+                    height: 8vh;
+                }
+            }
+
+            @media screen and (max-aspect-ratio : 1/1) and (min-width: 600px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 0%;
+                    left: 1.5%;
+                    width: auto;
+                    height: 8vh;
+                }
+            }
+
+            @media screen and (min-aspect-ratio : 1/1) and (max-width : 1300px) and (max-height: 300px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 1%;
                     left: 7.75%;
                     width: auto;
-                    height: 100%;
+                    height: 16vh;
+                }
+            }
+
+            @media screen and (min-aspect-ratio : 1/1) and (max-width : 1300px) and (min-height: 300px) and (max-height: 500px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 1%;
+                    left: 7.75%;
+                    width: auto;
+                    height: 16vh;
+                }
+            }
+
+            @media screen and (min-aspect-ratio : 1/1) and (max-width : 1300px) and (min-height: 500px) and (max-height: 600px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 1%;
+                    left: 7.75%;
+                    width: auto;
+                    height: 12vh;
+                }
+            }
+
+            @media screen and (min-aspect-ratio : 1/1) and (max-width : 1300px) and (min-height: 600px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 1%;
+                    left: 7.75%;
+                    width: auto;
+                    height: 8vh;
+                }
+            }
+
+            @media screen and (min-aspect-ratio : 1/1) and (min-width : 1300px) and (max-width : 1670px) and (min-height: 600px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 1%;
+                    left: 7.75%;
+                    width: auto;
+                    height: 8vh;
+                }
+            }
+
+            @media screen and (min-aspect-ratio : 1/1) and (min-width : 1670px) and (min-height: 600px)
+            {
+                img#logo
+                {
+                    position: relative;
+                    top: 1%;
+                    left: 7.75%;
+                    width: auto;
+                    height: 8vh;
                 }
             }
 
